@@ -13,6 +13,8 @@ Changes in version 1.015
 
 - Added socket connect functions with a timeout.
 
+- Added ibuf_readall and ibuf_openreadclose.
+
 NOTE: The next non-bugfix version of bglibs will be rewritten to use the
 new formatting routines in the appropriate iobuf and str functions.
 This will require linking against additional libraries in the future.
